tests/compile_errors/006-deep-yield.buzz
| Bad function yield type
import "std";

fun one() > void *> str? {
    yield "hello";
}

fun two() > void {
    one();
}

test "Deep yield" {
    fib<void, str?> fiber = &two();
    std.print(resume fiber ?? "nope");
}